fix popup image width on mobile

--- a/style.css
+++ b/style.css
@@ -1,15 +1,19 @@
 body {
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 0;
   padding: 0;
 }
 
 .container {
   max-width: 1200px;
-  padding: 50px 20px;
+  padding: 20px;
   margin: 0 auto;
+}
+
+h1 {
+  font-size: 48px;
 }
 
 .filter-buttons {
@@ -22,9 +26,10 @@ body {
   border-radius: 3px;
   color: ghostwhite;
   cursor: pointer;
+  font-size: 16px;
   padding: 10px;
   margin-right: 5px;
-  margin-bottom: 5px;
+  margin-bottom: 8px;
 }
 
 .btn:hover {
@@ -80,4 +85,15 @@ body {
 
 #selectedImage {
   max-height: 100%;
+  max-width: 100%;
+}
+
+@media screen and (max-width: 800px) {
+  .container {
+    padding: 20px;
+  }
+
+  #popUp {
+    padding: 0;
+  }
 }
